[project]
name = "ProgressUpdateServer"
version = "0.1.0"
description = "A demo server showcasing progress updates with FastMCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "fastmcp>=2.12.4",
    "mcp>=1.16.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}